added some endpoints
